[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "release-puller"
version = "0.1.0"
description = "Polls GitHub releases and pulls the latest version when a new one is detected."
requires-python = ">=3.11"
license = "MIT"

[project.scripts]
release-puller = "release_puller.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.4"]
